Updated Portfolio to be more IT focused

--- a/home.html
+++ b/home.html
@@ -52,13 +52,13 @@
                 <div class="spacer"></div>
                 <img src="assets/images/Alpha Headshot.png" alt="Headshot"><br>
                 <h2>Hello, <br>
-                My name is J. Alan Schnaare and I am a computer scientist!</h2>
+                My name is J. Alan Schnaare </h2>
             </div>
         </div>
         <div class="right-container">
             <div class="spacer"></div>
             <div class="spacer"></div>
-            <h1>Welcome to my <br> Developer Portfolio!
+            <h1>Welcome to my <br>Portfolio!
                 <br><br>
             </h1>
             <img src="assets/images/Desktop Icon.png" alt="Desktop Icon">
