--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         gtag('config', 'UA-149678515-1');
     </script>
     <meta name="description" content="Welcome to J. Alan Schnaare's 
-    developer portfolio. Here you can learn more about J. Alan Schnaare'script
+    portfolio. Here you can learn more about J. Alan Schnaare'script
     background, projects, services, and even get in contact with him.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
